// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View.web renders a snapshot with \`align:top,left\` 1`] = `
.c0 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin: 0px;
  padding: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: autopx;
  width: autopx;
}

<div
  className="c0"
  direction="row"
  height="auto"
  width="auto"
/>
`;

exports[`View.web renders a snapshot with \`direction:row\` 1`] = `
.c0 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0px;
  padding: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: autopx;
  width: autopx;
}

<div
  className="c0"
  direction="row"
  height="auto"
  width="auto"
/>
`;

exports[`View.web renders a snapshot with \`fullWidth\` 1`] = `
.c0 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0px;
  padding: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: autopx;
  width: 100%;
}

<div
  className="c0"
  direction="row"
  height="auto"
  width="auto"
/>
`;

exports[`View.web renders a snapshot with \`grow:1\` 1`] = `
.c0 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-grow: 1;
  -ms-flex-grow: 1;
  flex-grow: 1;
  margin: 0px;
  padding: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: autopx;
  width: autopx;
}

<div
  className="c0"
  direction="row"
  height="auto"
  width="auto"
/>
`;

exports[`View.web renders a snapshot with \`height:120\` 1`] = `
.c0 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0px;
  padding: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 120px;
  width: autopx;
}

<div
  className="c0"
  direction="row"
  height={120}
  width="auto"
/>
`;

exports[`View.web renders a snapshot with \`margin:0.5\` 1`] = `
.c0 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 5px;
  padding: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: autopx;
  width: autopx;
}

<div
  className="c0"
  direction="row"
  height="auto"
  width="auto"
/>
`;

exports[`View.web renders a snapshot with \`padding:0.5\` 1`] = `
.c0 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0px;
  padding: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: autopx;
  width: autopx;
}

<div
  className="c0"
  direction="row"
  height="auto"
  width="auto"
/>
`;

exports[`View.web renders a snapshot with \`width:120\` 1`] = `
.c0 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0px;
  padding: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: autopx;
  width: 120px;
}

<div
  className="c0"
  direction="row"
  height="auto"
  width={120}
/>
`;
